--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django
-Fabric
-boto
-psycopg2
-python-memcached
+Django==1.10.1
+Fabric==1.12.0
+boto==2.42.0
+djangorestframework==3.4.7
+greeking==2.1.3
+psycopg2==2.6.2
+python-memcached==1.58
