--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 django.log
 django.log*
 project/settings_dev.py
-chef/cookbooks/palewire/files/default/id_rsa
-chef/cookbooks/palewire/files/default/id_rsa.pub
-chef/cookbooks/palewire/files/default/authorized_keys
+project/settings_private.py
+chef/node.json
 *.egg-*
 .static/*
 .media/*
