--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Fabric==1.12.0
 boto==2.42.0
 djangorestframework==3.4.7
 greeking==2.1.3
+psycopg2==2.6.2
 python-memcached==1.58
 geoip2==2.4.0
 s3cmd==1.6.1
